fai async db